--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>statistics</artifactId>
+    <artifactId>smart-house-new</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -42,19 +42,11 @@
 
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
-                        <phase>initialize</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
 
-                    <execution>
-                        <id>check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
 
                     <execution>
                         <id>report</id>
@@ -65,23 +57,22 @@
                     </execution>
                 </executions>
 
-                <configuration>
-                    <rules>
-                        <rule>
-                            <limits>
-                                <limit>
-                                    <counter>BRANCH</counter>
-                                    <value>COVEREDRATIO</value>
-                                    <minimum>100%</minimum>
-                                </limit>
-                            </limits>
-                        </rule>
-                    </rules>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <rules>-->
+<!--                        <rule>-->
+<!--                            <limits>-->
+<!--                                <limit>-->
+<!--                                    <counter>BRANCH</counter>-->
+<!--                                    <value>COVEREDRATIO</value>-->
+<!--                                    <minimum>100%</minimum>-->
+<!--                                </limit>-->
+<!--                            </limits>-->
+<!--                        </rule>-->
+<!--                    </rules>-->
+<!--                </configuration>-->
 
             </plugin>
         </plugins>
     </build>
+
 </project>
-
-
